[tool.poetry]
name = "picsnake"
version = "0.1.0"
description = ""
authors = ["zombie110year <zombie110year@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
# 开发中！
orm = "~0.1.0"
aiosqlite = "^0.11.0"
databases = "^0.2.6"
aiodns = "^2.0.0"
cchardet = "^2.1.5"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
yapf = "^0.29.0"
ipython = "^7.12.0"
pytest-asyncio = "^0.10.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
